Try to use normal path for Grafana 5.0.4

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -346,7 +346,7 @@ enabled = true
 # files, and creates two dashboards, one for the symlink and one for the actual
 # file. Pointing Grafana at the ..data/ directory is a workaround to this
 # duplication. Perhaps this won't be necessary with Grafana v5.x?
-path = /etc/dashboards/..data/
+path = /etc/dashboards/
 
 #################################### Alerting ######################################
 [alerting]
