Add a provisioning directive to grafana.ini

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -23,6 +23,8 @@
 #
 ;plugins = /var/lib/grafana/plugins
 
+provisioning = /etc/provisioning
+
 #
 #################################### Server ####################################
 [server]
