Adds new switches_ping.json targets file to the gcp-service-discovery config.

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -175,6 +175,8 @@ spec:
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/blackbox-targets/neubot.json",
                 "--http-target=/targets/blackbox-targets-ipv6/neubot_ipv6.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/blackbox-targets-ipv6/neubot_ipv6.json",
+                "--http-target=/targets/blackbox-targets/switches_ping.json",
+                "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/blackbox-targets/switches_ping.json",
                 "--project={{GCLOUD_PROJECT}}"]
         resources:
           requests:
