Tells k8s to launch the Grafana pod as user 104: http://docs.grafana.org/installation/docker/#user-id-changes

--- a/k8s/prometheus-federation/deployments/grafana.yml
+++ b/k8s/prometheus-federation/deployments/grafana.yml
@@ -22,6 +22,8 @@ spec:
         # public IP and port so that it is publically accessible.
         run: grafana-server
     spec:
+      securityContext:
+        runAsUser: 104
       containers:
       # Check https://hub.docker.com/r/grafana/grafana/tags/ for the current
       # stable version.
