--- a/k8s/prometheus-federation/deployments/grafana.yml
+++ b/k8s/prometheus-federation/deployments/grafana.yml
@@ -22,10 +22,21 @@ spec:
         # public IP and port so that it is publically accessible.
         run: grafana-server
     spec:
+      # http://docs.grafana.org/installation/docker/#user-id-changes
+      # TODO (kinkade): Remove this initContainers section once it has been
+      # deployed once and permissions have been changed. It won't be needed
+      # again once the perms are changed once.
+      initContainers:
+      - name: reset-perms
+        image: busybox
+        command: ['chown', '-R', '472:472', '/work-dir']
+        volumeMounts:
+        - mountPath: /work-dir
+          name: grafana-storage
       containers:
       # Check https://hub.docker.com/r/grafana/grafana/tags/ for the current
       # stable version.
-      - image: grafana/grafana:5.0.4
+      - image: grafana/grafana:5.1.4
         name: grafana-server
         env:
         - name: GF_SECURITY_ADMIN_PASSWORD
