--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -295,9 +295,9 @@ ALERT SnmpExporterMissingMetrics
   ANNOTATIONS {
     summary = "Expected SNMP metrics are missing from Prometheus!",
     hints = "If the snmp_exporter service is running, then there may be a target configuration error. Check the target definitions in GCS and the target status in Prometheus.",
-    prometheus_targets = "http://status.mlab-oti.measurementlab.net:9090/targets",
+    prometheus_targets = "https://prometheus.mlab-oti.measurementlab.net/targets",
     gcsbucket = "https://console.cloud.google.com/storage/browser/operator-mlab-oti/prometheus/snmp-targets",
-    dashboard = "http://status.mlab-oti.measurementlab.net:3000/dashboard/db/switch-metrics"
+    dashboard = "https://grafana.mlab-oti.measurementlab.net/d/SuqnZ6Hiz/"
   }
 
 # Scraping SNMP metrics from a switch is failing.
@@ -311,7 +311,7 @@ ALERT SnmpScrapingDownAtSite
   ANNOTATIONS {
     summary = "Prometheus is unable to scrape SNMP metrics from a switch.",
     hints = "Maybe the switch is down? Is the snmp_exporter using the right community string? Look in switch-details.json in the m-lab/switch-config repo. Is the IP of the snmp_exporter VM in GCE whitelisted on the switch?",
-    dashboard = "https://grafana.mlab-oti.measurementlab.net/dashboard/file/Ops_SwitchOverview.json?orgId=1&var-site_name={{ $labels.site }}"
+    dashboard = "https://grafana.mlab-oti.measurementlab.net/d/SuqnZ6Hiz/?orgId=1&var-site_name={{ $labels.site }}"
   }
 
 # Prometheus is unable to get data from the script_exporter service.
@@ -343,7 +343,7 @@ ALERT ScriptExporterMissingMetrics
     hints = "If the script_exporter service is running, then there may be a target configuration error. Check the target definitions in GCS and the target status in Prometheus.",
     prometheus_targets = "http://status.mlab-oti.measurementlab.net:9090/targets",
     gcsbucket = "https://console.cloud.google.com/storage/browser/operator-mlab-oti/prometheus/script-targets",
-    dashboard = "http://status.mlab-oti.measurementlab.net:3000/dashboard/file/Ops_SwitchOverview.json"
+    dashboard = "https://grafana.mlab-oti.measurementlab.net/d/SuqnZ6Hiz/"
   }
 
 # Prometheus is unable to get data from the blackbox_exporter service for IPv4
@@ -405,7 +405,7 @@ ALERT TooManyNdtServersDown
   ANNOTATIONS {
     summary = "Too large a percentage of NDT servers are down.",
     hints = "Make sure that the blackbox_exporter, script_exporter and node_exporters are all working as expected. Was any update to the platform just released?",
-    dashboard = "https://grafana.mlab-oti.measurementlab.net/dashboard/file/Ops_PlatformOverview.json"
+    dashboard = "https://grafana.mlab-oti.measurementlab.net/d/JAq7W6Nmk/"
   }
 
 # One or more NDT-specific metrics is missing. These are the NDT metrics that
@@ -494,7 +494,7 @@ ALERT VdlimitMetricsMissingForNode
   ANNOTATIONS {
     summary = "Some vdlimit_* metrics are missing.",
     hints = "Check /var/spool/node_exporter/ on the node to see if the file vdlimit.prom is missing. The file is created by /etc/cron.d/prom_vdlimit_metrics.cron.",
-    dashboard = "https://grafana.mlab-oti.measurementlab.net/dashboard/file/Ops_PlatformOverview.json?orgId=1"
+    dashboard = "https://grafana.mlab-sandbox.measurementlab.net/d/JAq7W6Nmk/"
   }
 
 # A collectd-mlab service has a problem and is down.
@@ -579,7 +579,7 @@ ALERT ParserDailyVolumeTooLow
   ANNOTATIONS {
     summary = "Today's test volume is less than 70% of nominal daily volume.",
     hints = "Are machines online? Is data being collected? Is the parser working?",
-    url = "http://status.mlab-oti.measurementlab.net:3000/dashboard/file/Alert_ParserDailyVolumeTooLow.json"
+    url = "https://grafana.mlab-oti.measurementlab.net/d/PKqnWeNmz/"
   }
 
 # Nagios exporter cannot be scrapped (i.e. is down according to prometheus).
