Temporarily sets log level to debug.

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -280,7 +280,7 @@ api_url = https://www.googleapis.com/oauth2/v1/userinfo
 ;mode = console file
 
 # Either "trace", "debug", "info", "warn", "error", "critical", default is "info"
-;level = info
+level = debug
 
 # optional settings to set different levels for specific loggers. Ex filters = sqlstore:debug
 ;filters =
