Attempt to turn on debug loglevel for console mode, also removes defunct [dashboards.json] config section, in case it's messing with things in some backward-compatible fashion.

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -280,7 +280,7 @@ api_url = https://www.googleapis.com/oauth2/v1/userinfo
 ;mode = console file
 
 # Either "trace", "debug", "info", "warn", "error", "critical", default is "info"
-level = debug
+;level = info
 
 # optional settings to set different levels for specific loggers. Ex filters = sqlstore:debug
 ;filters =
@@ -288,7 +288,7 @@ level = debug
 
 # For "console" mode only
 [log.console]
-;level =
+level = debug
 
 # log line format, valid options are text, console and json
 ;format = console
@@ -337,18 +337,6 @@ level = debug
 ;enabled = false
 ;rabbitmq_url = amqp://localhost/
 ;exchange = grafana_events
-
-#################################### Dashboard JSON files ##########################
-[dashboards.json]
-enabled = true
-# This somewhat odd-looking path has to do with how k8s actually mounts files
-# into a container. When configMaps are mounted at /etc/dashboards, k8s puts the
-# actual data in a ..data/ subdirectory and then symlinks to the files in there.
-# When you point Grafana at /etc/dashboards, it recursively looks for all *.json
-# files, and creates two dashboards, one for the symlink and one for the actual
-# file. Pointing Grafana at the ..data/ directory is a workaround to this
-# duplication. Perhaps this won't be necessary with Grafana v5.x?
-path = /etc/dashboards/
 
 #################################### Alerting ######################################
 [alerting]
