Sets environment variable PROVISIONING_CFG_DIR manually in grafana k8s config.

--- a/k8s/prometheus-federation/deployments/grafana.yml
+++ b/k8s/prometheus-federation/deployments/grafana.yml
@@ -39,6 +39,8 @@ spec:
       - image: grafana/grafana:5.1.4
         name: grafana-server
         env:
+        - name: PROVISIONING_CFG_DIR
+          value: "/etc/provisioning"
         - name: GF_SECURITY_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
