--- a/k8s/prometheus-federation/deployments/grafana.yml
+++ b/k8s/prometheus-federation/deployments/grafana.yml
@@ -39,7 +39,7 @@ spec:
       - image: grafana/grafana:5.1.4
         name: grafana-server
         env:
-        - name: PROVISIONING_CFG_DIR
+        - name: GF_PATHS_PROVISIONING
           value: "/etc/provisioning"
         - name: GF_SECURITY_ADMIN_PASSWORD
           valueFrom:
