Removes provisioning path from grafana.ini into an env variable in the k8s container config. Turns off debug logging.

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -23,8 +23,6 @@
 #
 ;plugins = /var/lib/grafana/plugins
 
-provisioning = /etc/provisioning
-
 #
 #################################### Server ####################################
 [server]
@@ -288,7 +286,7 @@ api_url = https://www.googleapis.com/oauth2/v1/userinfo
 
 # For "console" mode only
 [log.console]
-level = debug
+;level =
 
 # log line format, valid options are text, console and json
 ;format = console
