Changes one of the annotation keys from 'url' to 'dashboard' to be consistent with other uses in the file.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -579,7 +579,7 @@ ALERT ParserDailyVolumeTooLow
   ANNOTATIONS {
     summary = "Today's test volume is less than 70% of nominal daily volume.",
     hints = "Are machines online? Is data being collected? Is the parser working?",
-    url = "https://grafana.mlab-oti.measurementlab.net/d/PKqnWeNmz/"
+    dashboard = "https://grafana.mlab-oti.measurementlab.net/d/PKqnWeNmz/"
   }
 
 # Nagios exporter cannot be scrapped (i.e. is down according to prometheus).
