--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -72,7 +72,7 @@ inhibit_rules:
 # Various other checks rely on the script-exporter being up. If the
 # script-exporter is not up, then don't alert on those dependencies.
 - source_match:
-    alertname: 'ScriptExporterDownOrMissing'
+    - alertname: 'ScriptExporterDownOrMissing'
   target_match:
     - alertname: 'ScriptExporterMissingMetrics'
     - alertname: 'TooManyNdtServersDown'
@@ -81,7 +81,7 @@ inhibit_rules:
 # Don't alert on missing SNMP metrics or SNMP scraping being broken if the
 # snmp-exporter is down.
 - source_match:
-    alertname: 'SnmpExporterDownOrMissing'
+    - alertname: 'SnmpExporterDownOrMissing'
   target_match:
     - alertname: 'SnmpExporterMissingMetrics'
     - alertname: 'SnmpScrapingDownAtSite'
