--- a/k8s/prometheus-federation/deployments/bigquery-exporter.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter.yml
@@ -22,6 +22,7 @@ spec:
                 "--type=gauge", "--query=/queries/bq_ipv6_bias.sql",
                 "--type=gauge", "--query=/queries/bq_ndt_worldmap.sql",
                 "--type=gauge", "--query=/queries/bq_ndt_geohash.sql",
+                "--type=gauge", "--query=/queries/bq_ndt_geohash_server.sql",
                 "--type=gauge", "--query=/queries/bq_ndt_server.sql" ]
         ports:
         - containerPort: 9050
