Try to correct experiment indexes

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -292,6 +292,46 @@ scrape_configs:
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
+    #'lax01': {1: '7,10,0,8,6,3,5,11,2,9,1,4',
+    #          2: '2,10,0,8,7,4,6,11,3,9,1,5',
+    #          3: '11,9,0,7,6,3,5,10,2,8,1,4'},
+    metric_relabel_configs:
+      - source_labels: [machine, index]
+        action: replace
+        regex: mlab1.lax01.measurement-lab.org;10
+        target_label: index
+        replacement: 1
+      - source_labels: [machine, index]
+        action: replace
+        regex: mlab2.lax01.measurement-lab.org;10
+        target_label: index
+        replacement: 1
+      - source_labels: [machine, index]
+        action: replace
+        regex: mlab3.lax01.measurement-lab.org;9
+        target_label: index
+        replacement: 1
+      - source_labels: [machine, index]
+        action: replace
+        regex: mlab1.lax01.measurement-lab.org;11
+        target_label: index
+        replacement: 7
+      - source_labels: [machine, index]
+        action: replace
+        regex: mlab2.lax01.measurement-lab.org;11
+        target_label: index
+        replacement: 7
+      - source_labels: [machine, index]
+        action: replace
+        regex: mlab3.lax01.measurement-lab.org;10
+        target_label: index
+        replacement: 7
+      - source_labels: [machine, index]
+        action: replace
+        regex: mlab3.lax01.measurement-lab.org;8
+        target_label: index
+        replacement: 9
+
 
   # Scrape config for the node_exporter on eb.measurementlab.net.
   - job_name: 'eb-node-exporter'
