Moves Grafana provisioning files into their standard locations, creates two configmaps (one for dashboards and one for datasources, and mounts them into their expected directories in the container.

--- a/k8s/prometheus-federation/deployments/grafana.yml
+++ b/k8s/prometheus-federation/deployments/grafana.yml
@@ -103,7 +103,9 @@ spec:
         - mountPath: /etc/dashboards
           name: grafana-dashboards
         - mountPath: /etc/provisioning/dashboards
-          name: grafana-provisioning
+          name: grafana-dashboard-provisioning
+        - mountPath: /etc/provisioning/datasources
+          name: grafana-datasource-provisioning
       # Disks created manually, can be named here explicitly using
       # gcePersistentDisk instead of the persistentVolumeClaim.
       volumes:
@@ -116,6 +118,9 @@ spec:
       - name: grafana-dashboards
         configMap:
           name: grafana-dashboards
-      - name: grafana-provisioning
+      - name: grafana-dashboard-provisioning
         configMap:
-          name: grafana-provisioning
+          name: grafana-dashboard-provisioning
+      - name: grafana-datasource-provisioning
+        configMap:
+          name: grafana-datasource-provisioning
