--- a/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
+++ b/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-oti.yml.template
@@ -13,7 +13,7 @@ datasources:
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string> url
-  url: http://prometheus.mlab-oti.measurementlab.net
+  url: https://prometheus.mlab-oti.measurementlab.net
   # <bool> enable/disable basic auth
   basicAuth: true
   # <string> basic auth username
