--- a/config/federation/grafana/provisioning/datasources/downloader-cluster_mlab-staging.yml.template
+++ b/config/federation/grafana/provisioning/datasources/downloader-cluster_mlab-staging.yml.template
@@ -5,7 +5,7 @@ apiVersion: 1
 # what's available in the database
 datasources:
   # <string, required> name of the datasource. Required
-- name: Data Proc (mlab-staging)
+- name: Downloader (mlab-staging)
   # <string, required> datasource type. Required
   type: prometheus
   # <string, required> access mode. proxy or direct (Server or Browser in the UI). Required
@@ -13,7 +13,7 @@ datasources:
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string> url
-  url: 35.192.129.3:9090
+  url: http://104.154.130.104:9090
   # <bool> mark as default datasource. Max one per org
   isDefault: {{IS_DEFAULT}}
   version: 1
