--- a/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-sandbox.yml.template
+++ b/config/federation/grafana/provisioning/datasources/prometheus-federation_mlab-sandbox.yml.template
@@ -5,7 +5,7 @@ apiVersion: 1
 # what's available in the database
 datasources:
   # <string, required> name of the datasource. Required
-- name: prometheus-federation_mlab-sandbox
+- name: Prometheus (mlab-sandbox)
   # <string, required> datasource type. Required
   type: prometheus
   # <string, required> access mode. proxy or direct (Server or Browser in the UI). Required
