Deletes old datasources, and adds http:// to the front of urls.

--- a/config/federation/grafana/provisioning/datasources/scraper-cluster_mlab-staging.yml.template
+++ b/config/federation/grafana/provisioning/datasources/scraper-cluster_mlab-staging.yml.template
@@ -13,7 +13,7 @@ datasources:
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string> url
-  url: 130.211.161.48:9090
+  url: http://130.211.161.48:9090
   # <bool> mark as default datasource. Max one per org
   isDefault: {{IS_DEFAULT}}
   version: 1
