--- a/config/federation/grafana/provisioning/datasources/scraper-cluster_mlab-sandbox.yml.template
+++ b/config/federation/grafana/provisioning/datasources/scraper-cluster_mlab-sandbox.yml.template
@@ -13,7 +13,7 @@ datasources:
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string> url
-  url: 35.188.154.65:9090
+  url: http://35.188.154.65:9090
   # <bool> mark as default datasource. Max one per org
   isDefault: {{IS_DEFAULT}}
   version: 1
