Add flag for -storage.local.num-fingerprint-mutexes

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -62,6 +62,7 @@ spec:
                "-storage.local.index-cache-size.fingerprint-to-timerange=262144000",
                "-storage.local.index-cache-size.label-name-to-label-values=262144000",
                "-storage.local.index-cache-size.label-pair-to-fingerprints=262144000",
+               "-storage.local.num-fingerprint-mutexes=50000",
                "-alertmanager.url=http://alertmanager-service.default.svc.cluster.local:9093",
                "-web.external-url=https://prometheus.{{GCLOUD_PROJECT}}.measurementlab.net",
                "-web.console.libraries=/usr/share/prometheus/console_libraries",
