Changes Mi to simply M for memory resource limit on k8s container per request from PR reviewer.

--- a/k8s/prometheus-federation/deployments/gmx.yml
+++ b/k8s/prometheus-federation/deployments/gmx.yml
@@ -36,7 +36,7 @@ spec:
         - containerPort: 9999
         resources:
           requests:
-            memory: "500Mi"
+            memory: "500M"
             cpu: "200m"
         volumeMounts:
         - mountPath: /var/lib/gmx
