Adds a conditional for SnmpScrapingDownAtSite with gmx_site_maintenance.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -325,6 +325,7 @@ ALERT SnmpExporterMissingMetrics
 ALERT SnmpScrapingDownAtSite
   IF up{job="snmp-targets", site!~".*t$"} == 0
         AND ON(site) probe_success{instance=~"s1.*", module="icmp"} == 1
+        UNLESS ON(site) gmx_site_maintenance == 1
   FOR 2h
   LABELS {
     severity = "page",
