Re-introduce v1.8 instance.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -2524,3 +2524,6 @@ scrape_configs:
         regex: 11
         target_label: index
         replacement: utility.mlab
+
+remote_read:
+  - url: "http://localhost:9094/api/v1/read"
