Test a couple of re-formatted alerts.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -46,8 +46,11 @@ groups:
 # sidestream exporter is not. Since sidestream is a core service, this must be
 # fixed.
   - alert: CoreServices_SidestreamIsNotRunning
-    expr: sum_over_time(up{service="sidestream"}[10m]) == 0 and on(machine) sum_over_time(probe_success{service="ssh806"}[20m])
-      / 20 >= 0.9 unless on(machine) (lame_duck_node == 1 or gmx_machine_maintenance
+    expr: |
+      sum_over_time(up{service="sidestream"}[10m]) == 0
+        and on(machine)
+      sum_over_time(probe_success{service="ssh806"}[20m]) / 20 >= 0.9
+        unless on(machine) (lame_duck_node == 1 or gmx_machine_maintenance
       == 1)
     for: 10m
     labels:
@@ -74,10 +77,11 @@ groups:
 #
 # TODO(soltesz): remove the != 0 check when legacy records are removed.
   - alert: ScraperMostRecentArchivedFileTimeIsTooOld
-    expr: (time() - (scraper_maxrawfiletimearchived{container="scraper-sync"} != 0))
-      > (56 * 60 * 60) and on(machine) (time() - process_start_time_seconds{service="sidestream"})
-      > (30 * 60 * 60) unless on(machine) (lame_duck_node == 1 or gmx_machine_maintenance
-      == 1)
+    expr: |
+      (time() - (scraper_maxrawfiletimearchived{container="scraper-sync"} != 0)) > (56 * 60 * 60)
+        and on(machine)
+      (time() - process_start_time_seconds{service="sidestream"})> (30 * 60 * 60)
+        unless on(machine) (lame_duck_node == 1 or gmx_machine_maintenance == 1)
     for: 2h
     labels:
       repo: dev-tracker
